--- a/webapp/src/components/AssetTopbar/SearchBarDropdown/CollectionResultRow/CollectionResultRow.module.css
+++ b/webapp/src/components/AssetTopbar/SearchBarDropdown/CollectionResultRow/CollectionResultRow.module.css
@@ -11,7 +11,7 @@
 }
 
 .collectionRowContainer:hover {
-  background-color: var(--dropdown-hover);
+  background-color: #f3f2f5;
 }
 
 .itemDataContainer {
@@ -21,12 +21,12 @@
 
 .collectionName {
   font-weight: bold;
-  color: white;
+  color: var(--text);
 }
 
 .creator {
   margin-top: 2px;
-  color: #a09ba8;
+  color: var(--secondary-text);
 }
 
 .image {
